2004-12-21 Mikhail Khodjaiants
	Switch to the new memory view interfaces (Eclipse 3.1).
	* InternalDebugCoreMessages.properties
	* CMemoryBlockExtensionRetrieval.java: new
	* CExtendedMemoryBlockRetrieval.java: deleted
	* CDebugTarget.java
	* CMemoryBlockExtension.java: new
	* CExtendedMemoryBlock.java: deleted

2004-12-20 Mikhail Khodjaiants
	Fix for bug 81698: NumberFormatException in CValue.
	* CValue.java

2004-12-16 Mikhail Khodjaiants
	Fix for bug 81381: Deadlock when single stepping.
	* CThread.java

2004-12-08 Mikhail Khodjaiants
	Fix for bug 79678: NPE in Expression.
	* CExpression.java

2004-12-01 Mikhail Khodjaiants
	New fix for bug 80034: Expressions view does not display correct no. of elements in array.
	* CValueFactory.java
	* CExpression.java

2004-12-03 Mikhail Khodjaiants
	Fix for bug 62659: Unable to set default for register format via plugin_customization.ini.
	* CDebugCorePreferenceInitializer.java: new
	* plugin.xml

2004-12-03 Mikhail Khodjaiants
	Fix for bug 80106: Terminating during stepping state caused exception in CDT.
	* CThread.java

2004-12-01 Mikhail Khodjaiants
	Partial fix for bug 77444: CDT does not handle address breakpoints across sessions.
	* CBreakpointManager.java
	
2004-12-01 Mikhail Khodjaiants
	Fix for bug 80034: Expressions view does not display correct no. of elements in array.
	* CValueFactory.java

2004-12-01 Mikhail Khodjaiants
	Fix for bug 79454: Unable to remove a breakpoint set from the gdb console.
	* CBreakpointManager.java

2004-12-01 Mikhail Khodjaiants
	Fix for bug 74043: Overaggressive exception reporting?
	* CBreakpointManager.java

2004-11-26 Mikhail Khodjaiants
	Fix for bug 79608: NPE in CValue.
	* CValue.java

2004-11-26 Mikhail Khodjaiants
	Fix for bug 79377: "Mixed disassembly" should fall back to disassembly w/o source when mixed disassembly fails.
	* Disassembly.java

2004-11-26 Mikhail Khodjaiants
	Fix for bug 79583: Deffered breakpoints and shared library events.
	* CSharedLibraryManager.java
