@@ -1,4 +1,9 @@
 2004-12-21 Mikhail Khodjaiants
+	Fix for bug 73168: Use memory view provided by Eclipse platform in CDT.
+	The CMemoryBlockextension is used as an adapter to "IMemoryBlockRetrieval".
+	* CMemoryBlockExtension.java
+
+2004-12-21 Mikhail Khodjaiants
 	Switch to the new memory view interfaces (Eclipse 3.1).
 	* InternalDebugCoreMessages.properties
 	* CMemoryBlockExtensionRetrieval.java: new
